--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fifipetshopapi",
   "version": "1.0.0",
   "description": "Fifi's Pet Shop, where pets prefer.",
-  "main": "node src/server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node index"
   },
   "repository": {
     "type": "github",
@@ -18,6 +18,8 @@
     "url": "https://github.com/erashu212/fifi-pet-shop-api/issues"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "express-content-length-validator": "^1.0.0",
     "express-session": "^1.14.2",
     "mongoose": "^4.6.7",
@@ -26,11 +28,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.0.33",
-    "@types/node": "^6.0.45",
-    "@types/lodash": "^4.14.38"
+    "@types/lodash": "^4.14.38",
+    "@types/node": "^6.0.45"
   },
   "engines": {
     "node": ">=6.9.0",
-    "npm":">=3.9.0"
+    "npm": ">=3.9.0"
   }
 }
