--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.14.2",
     "mongoose": "^4.6.7",
     "morgan": "^1.7.0",
+    "node-cache": "^4.1.0",
     "os": "^0.1.1"
   },
   "devDependencies": {
