--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "express-content-length-validator": "^1.0.0",
     "express-session": "^1.14.2",
