--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.1",
     "errorhandler": "^1.4.3",
     "express": "^4.14.0",
     "express-content-length-validator": "^1.0.0",
@@ -27,12 +28,14 @@
     "mongoose": "^4.6.7",
     "morgan": "^1.7.0",
     "node-cache": "^4.1.0",
-    "os": "^0.1.1"
+    "os": "^0.1.1",
+    "socket.io": "^1.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.0.33",
     "@types/lodash": "^4.14.38",
-    "@types/node": "^6.0.45"
+    "@types/node": "^6.0.45",
+    "nodemon": "^1.11.0"
   },
   "engines": {
     "node": ">=6.9.0",
