--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Fifi's Pet Shop, where pets prefer.",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "nodemon index"
   },
   "repository": {
     "type": "github",
@@ -25,9 +25,9 @@
     "express": "^4.14.0",
     "express-content-length-validator": "^1.0.0",
     "express-session": "^1.14.2",
+    "memory-cache": "^0.1.6",
     "mongoose": "^4.6.7",
     "morgan": "^1.7.0",
-    "node-cache": "^4.1.0",
     "os": "^0.1.1",
     "socket.io": "^1.5.1"
   },
